--- a/src/styles.css
+++ b/src/styles.css
@@ -9,18 +9,20 @@ body {
 }
 
 header {
+  position: fixed; 
 	padding: 20px 0;
-  /* opacity: 0.8; */
   background: #202833;
+  width: 100%;
+  height: 80px;
 }
 
 .caixa-header {
   font-family: 'Roboto', sans-serif;
   position: relative;
   width: 940px;
-  height: 80px;
   margin: 0 auto;
 }
+
 
 .logo{
 	position: absolute;
@@ -56,8 +58,9 @@ nav a:hover {
   font-family: 'Roboto', sans-serif;
   position: relative;
   width: 940px;
-  height: 360px;
+  height: 400px;
   margin: 0 auto;
+  padding-top: 100px;
 }
 
 .descricao-apresentacao{
@@ -86,7 +89,7 @@ nav a:hover {
 
 .img-apresentacao{
   position: absolute;
-	top: 60px;
+	top: 150px;
 	right: 100px;
 }
 
@@ -151,6 +154,7 @@ nav a:hover {
 }
 
 .skills{
+ 
   font-family: 'Roboto', sans-serif;
   position: relative;
   width: 940px;
@@ -248,7 +252,7 @@ nav a:hover {
   width: 300px;
   height: 350px;
   margin-right: 30px;
-  border: 2px solid #5ce3d9;
+  border: 2px solid #ffffff;
   box-shadow: 1px 1px 3px 2px #202833;
   border-radius: 10px;
   text-align: center;
@@ -258,12 +262,8 @@ nav a:hover {
 
 .projeto:hover{
   top:-2px;
-  width: 300px;
-  height: 350px;
+  border: 2px solid #5ce3d9;
   box-shadow: 1px 1px 3px 2px #5ce3d9;
-  border-radius: 10px;
-  text-align: center;
-  padding: 20px 20px;
 }
 
 .projeto > h3{
@@ -271,7 +271,7 @@ nav a:hover {
 	font-size: 24px;
   margin-bottom: 10px;
   text-align: center;
-  color: #5ce3d9;
+  color: #ffffff;
 }
 
 .projeto > p{
@@ -309,7 +309,7 @@ display: flex;
 .botoesprojeto > a {
   text-decoration: none;
   margin: 0 5px;
-  color: #5ce3d9;
+  color: #ffffff;
   background-color: #202833;
   padding: 10px 10px;
   border-radius: 5px; 
@@ -317,6 +317,7 @@ display: flex;
 
 .botoesprojeto > a:hover {
 box-shadow: 1px 1px 1px 2px #5ce3d9;
+color: #5ce3d9;
 }
 
 .iconprojeto{
